# llm_cong_predict

./: .gitignore  README.md  pyproject.toml  run.py
docs/: ORCHESTRATION.md  PORTING_NOTES.md  TRANSLATION_STATUS.md  VALIDATION_CHECKLIST.md
scripts/: get_gpt_embeddings.py  setup_git.sh  validate_oracle.py
src/llm_cong_predict/: config.py
src/llm_cong_predict/cleaning/: aspirations.py  assemble.py  factors.py
src/llm_cong_predict/features/: embeddings.py  essay_variables.py  readability.py  salat.py
src/llm_cong_predict/io/: labels.py  readers.py
src/llm_cong_predict/metrics/: cv_metrics.py
src/llm_cong_predict/models/: base_learners.py  folds.py  meta.py  native_superlearner.py  r_superlearner.py  screeners.py
src/llm_cong_predict/pipeline/: build.py  graph.py  model_spec.py
tests/: conftest.py  test_cleaning.py  test_cv_metrics.py  test_features.py  test_io.py  test_models.py  test_pipeline.py
tests/fixtures/: synthetic_data.py
